--- a/style.css
+++ b/style.css
@@ -1,18 +1,120 @@
-#user_container
-{
-    background: #eef0f2;
-    width: 400px;
+html {
+    font-family: Arial, Helvetica, sans-serif;
 }
-#user_container #user_photo_box
+
+body{
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+#geral_container 
+{
+    width: 75%;
+}
+
+#projets_container
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid black;
+}
+#projets_container #project_search_container
+{
+    width: 80%;
+}
+
+#projets_container #project_search_container #project_search_input
+{
+    width: 45%;
+}
+#projets_container #project_search_container #project_search_button
+{
+    width: 15%;
+}
+
+#projets_container #projects_buttons_container
+{
+    display: flex;
+    justify-content: end;
+}
+#projets_container #projects_buttons_container .projects_buttons_container_item
+{
+    margin: 0px 10px;
+}
+#projets_container #projets_box
+{
+    width: 80%;
+}
+#projets_container #projets_box .project_dates
+{
+    display: flex;
+    justify-content: space-between;
+}
+#projets_container #projets_box .project_box
+{
+    background-color: white;
+    padding: 25px;
+    border: 1px solid black;
+    margin: 10px 0px;
+}
+#projets_container #projets_box .project_box img
 {
     width: 100%;
 }
-#user_container #user_photo_box #user_photo_img
-{
-    width: 80%;
-    height: 80%;
-}
-#user_container #user_description_box
-{
 
+@media screen and (max-width: 768px) {
+    #geral_container 
+    {
+        width: 100%;
+    }
+
+    #projets_container #projects_buttons_container
+    {
+        display: flex;
+        justify-content: end;
+        padding: 15px 0px;
+    }
+
+    #projets_container #projets_box
+    {
+        margin: 20px 0px;
+        width: 90%;
+    }
+
+    #projets_container #projets_box #projects_buttons_container
+    {
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+    }
+
+    #projets_container #projects_buttons_container .projects_buttons_container_item
+    {
+        margin: 0px;
+    }
+
+    #projets_container #project_search_container
+    {
+        width: 90%;
+    }
+    #projets_container #project_search_container
+    {
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+    }
+    #projets_container #project_search_container .project_search_input_item
+    {
+        width: 100%;
+    }
+
+    #projets_container #project_search_container #project_search_input
+    {
+        width: 99.3%;
+        margin: 0px;
+        padding: 0px;
+    }
 }
